syntax = "proto3";

package protoauth;

import "google/api/annotations.proto";

option go_package = "internal/proto";

service Auth {
    rpc Registration(RegistrationRequest) returns (RegistrationReply) {
        option (google.api.http) = {
            post: "/api/v1/reg"
            body: "*"
        };
    }
    rpc Login(LoginRequest) returns (LoginReply) {
        option (google.api.http) = {
            post: "/api/v1/login"
            body: "*"
        };
    }
}

service Business {
    rpc Hello(HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/api/v1/hello"
            body: "*"
        };
    }
}

message RegistrationRequest {
    string username = 1;
    string password = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegistrationReply {
    string result = 1;
}

message LoginReply {
    string result = 1;
    string token = 2;
}

message HelloRequest {
    string authorization = 1;
}

message HelloReply {
    string hello_name = 1;
}